tests/parser/invalid/invalid_assignment.src
fn main() {
    5 = x;  // Ошибка: нельзя присваивать литералу
    return 0;
}